--- a/week-8/in-n-out-books/src/index.html
+++ b/week-8/in-n-out-books/src/index.html
@@ -1,6 +1,6 @@
 <!--
 ===============================================
-; Title:  Assignment 8.2
+; Title:  Assignment 5.2
 ; Author: Adam Luna
 ; Date: 27 June 2021
 ; Description: HTML Index file
@@ -11,7 +11,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>InNOutBooks</title>
+  <title>InNOutBooksp1</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
